<resources>
    <string name="geolocation_api_key">AIzaSyDfI6z3BaDP6lZwax3AtH_pb01V6LDQaCU</string>
    <string name="app_name">Scanner</string>
    <string name="company_logo">Company Logo</string>
    <string name="title_splash">Scan anywhere, anytime now</string>
    <string name="placeholder">Placeholder</string>
    <string name="title_activity_image_list">ImageListActivity</string>
    <string name="settings">Settings</string>
    <string name="grant">Grant</string>
    <string name="permission_request">Permissions are required to access functionality</string>
    <string name="grid_image_item">Grid Image Item</string>
    <string name="gallery">Gallery</string>
    <string name="capture">Capture</string>
    <string name="flash">Flash</string>
    <string name="back_button">Back button</string>
    <string name="sort_by">Sort By</string>
    <string name="clear">Clear</string>
    <string name="msg_capture">Align your document within this box and capture the image</string>
    <string name="msg_review_image">Before proceeding make sure that the data on the image is not blurred and entirely visible to you. Click \'retake\' if you want to upload the image again</string>
    <string name="review_image">Review Image</string>
    <string name="retake">Retake</string>
    <string name="save">Save</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="enter_file_name">Enter file name</string>
    <string name="name">Name</string>
    <string name="size">Size</string>
    <string name="last_modified">Last Modified</string>
    <string name="path">Path</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
</resources>
