<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--        android:backgroundTint="#80625856"-->
        <androidx.camera.view.PreviewView
            android:id="@+id/previewView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:src="@drawable/ic_shortcut_arrow_back_filled"
            android:theme="@style/AppTheme"
            android:layout_marginTop="@dimen/dp_10"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/back_button" />
        
        
        
        <TextView
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            app:layout_constraintBottom_toTopOf="@+id/cropView"
            android:text="@string/msg_capture"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="12sp"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_height="wrap_content"/>

        <View
            android:id="@+id/cropView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_250"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            android:background="@drawable/border"
            app:layout_constraintBottom_toTopOf="@+id/overlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <View
            android:id="@+id/cameraBottomView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_130"
            android:background="@color/black_50"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/overlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@id/cameraBottomView"
            app:layout_constraintEnd_toEndOf="@id/cameraBottomView"
            app:layout_constraintStart_toStartOf="@id/cameraBottomView"
            app:layout_constraintTop_toTopOf="@id/cameraBottomView">


            <ImageView
                android:id="@+id/imgGallery"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_70"
                android:layout_gravity="bottom"
                android:layout_weight="0.5"
                android:contentDescription="@string/gallery"
                android:scaleX="0.5"
                android:scaleY="0.5"
                android:src="@drawable/ic_collections_24dp" />


            <ImageView
                android:id="@+id/imgCapture"
                android:layout_width="@dimen/dp_0"
                android:layout_height="@dimen/dp_90"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/capture"
                android:src="@drawable/ic_adjust_24dp" />

            <ImageView
                android:id="@+id/imgFlash"
                android:layout_width="@dimen/dp_0"
                android:layout_height="@dimen/dp_70"
                android:layout_gravity="bottom"
                android:layout_weight="0.5"
                android:contentDescription="@string/flash"
                android:scaleX="0.5"
                android:scaleY="0.5"
                android:src="@drawable/ic_flash_auto_24dp" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>