<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.view.ImageListActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

            <LinearLayout
                android:id="@+id/layoutSort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:orientation="horizontal"
                android:paddingStart="@dimen/dp_16"
                android:paddingTop="@dimen/dp_5"
                android:paddingEnd="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_5">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/dp_15"
                    android:text="@string/sort_by"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="@dimen/dp_5"
                        android:layout_marginEnd="@dimen/dp_5"
                        android:text="@string/name"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <RadioButton
                        android:id="@+id/radioSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_5"
                        android:layout_marginEnd="@dimen/dp_5"
                        android:text="@string/size"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </RadioGroup>

                <TextView
                    android:id="@+id/tvClearSort"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:gravity="end"
                    android:text="@string/clear"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:visibility="invisible" />

            </LinearLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <include
            android:id="@+id/content"
            layout="@layout/content_image_list" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@drawable/ic_camera_24dp" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>